syntax = "proto3";

package auth;

service AuthService {
  rpc CreateUser (User) returns (User);
  rpc WatchNewUser (Empty) returns (stream User);
}

message Empty{}

message User {
  string id = 1;
  string msg = 2;
}
